spec/error_undefined_function.expected
spec/error_undefined_function.kex:4:16: error: Undefined function: `doesNotExist`
Aborted: fix type errors before running (use --no-check to skip).
