spec/error_undefined_function.kex
# Calling an undefined function is a runtime error.
main do
  IO.printLine("before")
  IO.printLine(doesNotExist())
end
